hs-bindgen/examples/failing/array_res_5.h
//! A (multi-dimensional) array (of known size) can not be the return type of a function
int fun_5(int x)[4][3];